tests/snapshots/anyhow__tree_repr_list.snap
---
source: tests/anyhow.rs
expression: result.unwrap_err()
---
context

Caused by:
    0: E6, at tests/generate/mod.rs:45:9
    1: E5
    2: E3
    3: E1
